# backend

./: .pre-commit-config.yaml  Dockerfile  README.md  backend_db_schema.pgerd  docker-compose.yml  pyproject.toml
src/: main.py
src/api/: __init__.py
src/api/v1/: __init__.py  dependencies.py  schemas.py
src/api/v1/order/: dependencies.py  excepions.py  routers.py
src/config/: gunicorn.py  postgres.py  settings.py
src/core/: database.py  exception.py
src/domain/order/: service.py
src/domain/order/repositories/: ABC.py  exceptions.py  repository.py
src/infrastructure/database/: postgres.py  schema.py
src/infrastructure/logger/: formatters.py  gunicorn.py  root.py
src/infrastructure/server/: gunicorn.py
